Fix alignment

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -4,22 +4,22 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 .header {
   display: flex;
-  height: 32px;
+  height: 72px;
   background: darkmagenta;
   color: white;
-  justify-content: start;
   align-items: center;
+  padding: 0 16px;
+  font-size: 32px;
   font-weight: 900;
-  padding-left: 16px;
 }
 
 .footer {
   display: flex;
+  height: 72px;
   height: 32px;
   background: #eee;
   color: darkmagenta;
@@ -34,18 +34,18 @@ body {
   background: royalblue;
   box-sizing: border-box;
   padding: 16px;
-  font-size: 24px;
+
 }
 .main {
+  flex: 1;
   display: flex;
-  flex-direction: row;
-  flex-grow: 1;
 }
 
 .cards {
   display: flex;
   flex-wrap: wrap;
-  padding: 46px
+  padding: 48px;
+  gap: 32px;
   }
 
 .card {
@@ -54,19 +54,23 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
   flex: 1 1 160px;
-  padding: 8px;
-  margin: 16px;
-  font-size: small;
+  padding: 16px;
+  width: 300;
 }
 
-:link {
+a {
   color: white;
   text-decoration: none;
+  font-size: 24px;
 }
 
 ul{
   list-style: none;
   padding: 0;
-  margin: 8px;
-  line-height: 2;
+  margin: 0;
 }
+
+li {
+  margin-bottom: 16px;
+}
+
